test/libsolidity/syntaxTests/types/bytes33.sol
contract C {
  bytes33 b33 = 1;
}
// ----
// DeclarationError 7920: (15-22='bytes33'): Identifier not found or not unique.
